<?xml version="1.0"?>
<package format="3">
  <name>nvblox_ros</name>
  <version>0.1.0</version>
  <description>Lightweight ROS 2 entrypoint for running nvblox TSDF-only mapping.</description>

  <maintainer email="local@example.com">local</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>message_filters</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_msgs</depend>

  <exec_depend>rosbag2_transport</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
